--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ log = { version = "0.4", features = ["serde", "std"] }
 nom = "7.1.3"
 regex = "1.7"
 reqwest = { version = "0.11", features = ["blocking"] }
+rstest = "0.17.0"
 scraper = "0"
 serde = { version = "1.0", features = ["derive"] }
 stderrlog = "0.5.4"
