--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,5 @@ reqwest = { version = "0.11", features = ["blocking"] }
 rstest = "0.17.0"
 scraper = "0"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0.95", features = ["preserve_order"] }
 stderrlog = "0.5.4"
