--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ maintenance = { status = "actively-developed" }
 anyhow = "1.0"
 chrono = "0.4"
 clap = { version = "4", features = ["cargo", "derive"] }
+csv = "1.2.1"
 log = { version = "0.4", features = ["serde", "std"] }
 nom = "7.1.3"
 regex = "1.7"
