No need to compile rstest unless testing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,10 @@ log = { version = "0.4", features = ["serde", "std"] }
 nom = "7.1.3"
 regex = "1.7"
 reqwest = { version = "0.11", features = ["blocking"] }
-rstest = "0.17.0"
 scraper = "0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0.95", features = ["preserve_order"] }
 stderrlog = "0.5.4"
+
+[dev-dependencies]
+rstest = "0.17.0"
